--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -15,7 +15,7 @@
     height :3vh;
     margin-top :7px;
     margin-left :20px;
-    width :70vw;
+    width :60vw;
     padding-left :20px;
     color :white;
 }
@@ -25,7 +25,7 @@
     height :3vh;
     background-color: rgb(68, 68, 68) ;
     font-weight: bold ;
-    width :10vw;
+    width :80px;
     margin-left :10px;
     color :white;
 }
