--- a/src/components/Tree/Tree.css
+++ b/src/components/Tree/Tree.css
@@ -1,16 +1,17 @@
 .tree{
-    background-color: rgb(54, 54, 54) ;
+    background-color: rgb(36, 35, 35) ;
     width :18vw;
     height : 95vh ;
     position: fixed;
     top : 5vh ;
     left :0;
+    z-index: 5;
     color :white;
     overflow: scroll ;
+    box-shadow: 1px 5px 15px black ;
 }
 
 .tree h5{
     font-family: 'Courier New', Courier, monospace ;
     font-weight: bold ;
-    font-size: 15px
 }
